Collection upload tightening Fixes #68, Fixes #69
